// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpportunityCard snapshots matches the layout 1`] = `
<body>
  <div>
    <div
      class="bg-white border-1px border-base-lighter padding-3 radius-md margin-bottom-205"
      data-testid="test"
    >
      <div
        class="fdr margin-bottom-105"
      >
        <div>
          <span
            class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px
        text-no-wrap
        bg-white text-base-darkest bg-certification
        
        
        
      "
          >
            Funding
          </span>
        </div>
        <div
          class="mla"
        >
          <button
            class="usa-button usa-tag bg-transparent text-normal text-base border-1px border-base-light hide-unhide-button margin-right-2"
            type="button"
          >
            <div
              class="display-flex flex-row flex-justify-center flex-align-center "
            >
              <div
                class="fdr fac"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon "
                  focusable="false"
                  role="img"
                >
                  <use
                    xlink:href="/vendor/img/sprite.svg#visibility_off"
                  />
                </svg>
                <span
                  class="margin-left-05 line-height-sans-2"
                >
                  Hide
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="text-normal font-body-md margin-bottom-105"
      >
        <a
          class="usa-link"
          href="/funding/"
        >
          test
        </a>
      </div>
      <div
        class="override-p-2xs text-base-dark"
      >
        <div
          class="usa-prose "
        >
          <p>
            **Test Content
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OpportunityCard snapshots matches the layout when status is first come first serve 1`] = `
<body>
  <div>
    <div
      class="bg-white border-1px border-base-lighter padding-3 radius-md margin-bottom-205"
      data-testid="test"
    >
      <div
        class="fdr margin-bottom-105"
      >
        <div>
          <span
            class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px
        text-no-wrap
        bg-white text-base-darkest bg-certification
        
        
        
      "
          >
            Funding
          </span>
        </div>
        <div
          class="mla"
        >
          <button
            class="usa-button usa-tag bg-transparent text-normal text-base border-1px border-base-light hide-unhide-button margin-right-2"
            type="button"
          >
            <div
              class="display-flex flex-row flex-justify-center flex-align-center "
            >
              <div
                class="fdr fac"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon "
                  focusable="false"
                  role="img"
                >
                  <use
                    xlink:href="/vendor/img/sprite.svg#visibility_off"
                  />
                </svg>
                <span
                  class="margin-left-05 line-height-sans-2"
                >
                  Hide
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="text-normal font-body-md margin-bottom-105"
      >
        <a
          class="usa-link"
          href="/funding/"
        >
          test
        </a>
      </div>
      <div
        class="dashboard-opportunity-card-due-date text-bold"
      >
        First Come, First Serve
      </div>
      <div
        class="override-p-2xs text-base-dark"
      >
        <div
          class="usa-prose "
        >
          <p>
            **Test Content
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OpportunityCard snapshots matches the layout when status is rolling application 1`] = `
<body>
  <div>
    <div
      class="bg-white border-1px border-base-lighter padding-3 radius-md margin-bottom-205"
      data-testid="test"
    >
      <div
        class="fdr margin-bottom-105"
      >
        <div>
          <span
            class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px
        text-no-wrap
        bg-white text-base-darkest bg-certification
        
        
        
      "
          >
            Funding
          </span>
        </div>
        <div
          class="mla"
        >
          <button
            class="usa-button usa-tag bg-transparent text-normal text-base border-1px border-base-light hide-unhide-button margin-right-2"
            type="button"
          >
            <div
              class="display-flex flex-row flex-justify-center flex-align-center "
            >
              <div
                class="fdr fac"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon "
                  focusable="false"
                  role="img"
                >
                  <use
                    xlink:href="/vendor/img/sprite.svg#visibility_off"
                  />
                </svg>
                <span
                  class="margin-left-05 line-height-sans-2"
                >
                  Hide
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="text-normal font-body-md margin-bottom-105"
      >
        <a
          class="usa-link"
          href="/funding/"
        >
          test
        </a>
      </div>
      <div
        class="dashboard-opportunity-card-due-date text-bold"
      >
        Rolling Application
      </div>
      <div
        class="override-p-2xs text-base-dark"
      >
        <div
          class="usa-prose "
        >
          <p>
            **Test Content
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OpportunityCard snapshots matches the layout with a due date 1`] = `
<body>
  <div>
    <div
      class="bg-white border-1px border-base-lighter padding-3 radius-md margin-bottom-205"
      data-testid="test"
    >
      <div
        class="fdr margin-bottom-105"
      >
        <div>
          <span
            class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px
        text-no-wrap
        bg-white text-base-darkest bg-certification
        
        
        
      "
          >
            Funding
          </span>
        </div>
        <div
          class="mla"
        >
          <button
            class="usa-button usa-tag bg-transparent text-normal text-base border-1px border-base-light hide-unhide-button margin-right-2"
            type="button"
          >
            <div
              class="display-flex flex-row flex-justify-center flex-align-center "
            >
              <div
                class="fdr fac"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon "
                  focusable="false"
                  role="img"
                >
                  <use
                    xlink:href="/vendor/img/sprite.svg#visibility_off"
                  />
                </svg>
                <span
                  class="margin-left-05 line-height-sans-2"
                >
                  Hide
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="text-normal font-body-md margin-bottom-105"
      >
        <a
          class="usa-link"
          href="/funding/"
        >
          test
        </a>
      </div>
      <div
        class="dashboard-opportunity-card-due-date"
      >
        <span
          class="dashboard-opportunity-card-due-date-header"
        >
          Due: 
        </span>
        09/01/2030
         
      </div>
      <div
        class="override-p-2xs text-base-dark"
      >
        <div
          class="usa-prose "
        >
          <p>
            **Test Content
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
